--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
@@ -2,7 +2,7 @@
 
 ::: tip 📁 TÀI NGUYÊN
 
-[Download tài liệu buổi 4](https://drive.google.com/file/d/1vBLub8CTxLuUR47jGFbx6hDFt9h6LOIR/view)
+[Download tài liệu buổi 4](https://drive.google.com/uc?id=1yC_AMzdyaNDbFktZ4c_-FTfnK1b0Bt1z&export=view)
 :::
 
 # 1. Bài tập 12
