--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/5.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/5.md
@@ -2,7 +2,7 @@
 
 ::: tip 📁 TÀI NGUYÊN
 
-[Download tài liệu buổi 5](https://drive.google.com/file/d/1rHp7dDF96xn4eNjNn7qGO8kW_2-_p6GE/view)
+[Download tài liệu buổi 5](https://drive.google.com/uc?id=1xzqWDuGPQySiI5nvx9CR7OeZZUwJSGUD&export=view)
 :::
 
 <comment/>
