--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
@@ -5,7 +5,49 @@
 [Download tài liệu buổi 4](https://drive.google.com/uc?id=1yC_AMzdyaNDbFktZ4c_-FTfnK1b0Bt1z&export=view)
 :::
 
-# 1. Bài tập 12
+## Kiến thức
+
+### Định tuyến nội miền
+
+- Là nhóm các mạng `LAN` và `router` có chung chính sách quản trị.
+
+- Các giải thuật mà `router` sử dụng để vạch đường gọi là `IGP` (*Interior GateWay Protocol*).
+
+::: 💡 tip Giải thuật <code>RIP</code> và  <code>OSPF</code>
+
+- `RIP` (*[Routing Information Protocol](https://en.wikipedia.org/wiki/Routing_Information_Protocol))*: sử dụng giải thuật `Distance Vector` (*theo nguyên lý [bellman-Ford](https://vi.wikipedia.org/wiki/Thu%E1%BA%ADt_to%C3%A1n_Bellman%E2%80%93Ford)*), phiên bản `RIP` version **2**:
+
+  1. Đơn vị đo khoảng cách dùng trong vạch đường là `hops`
+
+  2. Số lượng số bước nhảy tối đa là `15`
+
+  3. Chù kỳ cập nhật bảng vạch đường là `30s` (*có thể tùy chỉnh*)
+
+  4. Tầng vận chuyển sử dụng [UDP](https://vi.wikipedia.org/wiki/UDP) với cổng là `520`
+
+  5. Hỗ trợ [CIDR](https://quantrimang.com/cidr-la-gi-165535) và [MD5](https://vi.wikipedia.org/wiki/MD5)
+
+  ==> Phù hợp triển khai trên các **định tuyến nội miền** có kích thước nhỏ và không phức tạp
+
+- `OSPF` (*[Open Shortest Path First](https://vi.wikipedia.org/wiki/OSPF)*): sử dụng giải thuật `LSP` (*Link State Packet*) dựa trên thuật toán [Dijkstra](https://vi.wikipedia.org/wiki/Thu%E1%BA%ADt_to%C3%A1n_Dijkstra), phiên bản `OSPF` version **2**
+
+  1. Hội tụ nhanh và không có tình trặng lặp vô tận việc vạch đường
+  
+  2. Hỗ trợ mạng kích thước lớn
+
+  3. Hỗ trợ [CIDR](https://quantrimang.com/cidr-la-gi-165535) và [MD5](https://vi.wikipedia.org/wiki/MD5)
+
+  ==> Phù hợp triển khai trên các **định tuyến nội miền** có kích thước lớn và phức tạp
+:::
+
+::: warning ⚠️ LƯU Ý
+
+- Trong `kathara` để sử dụng **định tuyến nội miền** sử dụng công cụ có sẵn là `Quagga`: là dịch vụ chứa các giải thuật vạch đường như `RIPv2` và `OSPFv2` hoạt động tốt trên `IPv4`, `IPv6`...
+
+- Được cài đặt tại đường dẫn `/etc/quagga` trong máy ảo `Kathara`
+:::
+
+## 1. Bài tập 12
 
 ::: tip 💡 MÔ HÌNH
 
@@ -20,8 +62,11 @@ Xây dựng hệ thống mạng với mô hình như sau :
 ```sh
 mkdir ~/Desktop/BaiTap12
 cd ~/Desktop/BaiTap12
-mkdir 
+mkdir router1 router2 router3 router4 
+touch lab.conf router1.startup router2.startup router3.startup router4.startup
 ```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/31-16-57-29-Screenshot%20from%202021-10-31%2014-36-10.png" width="500">
 
 ### Thiết lập các file
 
@@ -33,20 +78,23 @@ mkdir
   router1[1]=G
   router1[2]=E
   router1[3]=A
+
   router2[0]=E
   router2[1]=F
   router2[2]=B
+
   router3[0]=F
   router3[1]=G
   router3[2]=I
   router3[3]=C
+
   router4[0]=D
   router4[1]=I
   router4[2]=H
   ```
   :::
 
-  ::: tab pc1.startup
+  ::: tab router1.startup
   ```txt
   ifconfig eth0 100.1.0.13/30 up
   ifconfig eth1 100.1.0.9/30 up
@@ -56,13 +104,135 @@ mkdir
   ```
   :::
 
-  ::: tab pc2.startup
+  ::: tab router2.startup
   ```txt
+  ifconfig eth0 100.1.0.2/30 up
+  ifconfig eth1 100.1.2.1/24 up
+  ifconfig eth2 100.1.2.1/24 up
+  /etc/init.d/quagga start
+  ```
+  :::
   
+  ::: tab router3.startup
+  ```txt
+  ifconfig eth0 100.1.0.6/30 up
+  ifconfig eth1 100.1.0.10/30 up
+  ifconfig eth2 100.1.0.17/30 up
+  ifconfig eth3 100.1.3.1/24 up
+  /etc/init.d/quagga start
+  ```
+  :::
+
+  ::: tab router4.startup
+  ```txt
+  ifconfig eth0 100.1.4.1/24 up
+  ifconfig eth1 100.1.0.18/30 up
+  ifconfig eth2 100.1.0.14/30 up
+  /etc/init.d/quagga start
   ```
   :::
 ::::
 
-### Khởi tạo hệ thống máy ảo
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/31-15-22-49-Screen%20Shot%202021-10-31%20at%2015.22.42.png" width="600">
+
+::: tip 💡 Giải thích
+
+Lệnh `etc/init.d/quagga start`: để khởi động dịch vụ `Quagga`
+:::
+### Cấu hình `Quagga`
+
+Trong mỗi thư viện `router` hãy tạo thư mục và cấu hình như sau : 
+
+```txt-no:no-line-numbers
+-- router1
+   -- etc
+      -- quagga
+       + daemons
+       + ripd.conf
+       + zebra.conf
+```
+
+:::: tabs
+
+  ::: tab daemons
+  ```txt
+  zebra=yes
+  ripd=yes
+  ```
+  :::
+
+  ::: tab zebra.conf
+  ```txt
+  hostname zebra
+  password zebra
+  enable password zebra
+  log file /var/log/zebra/zebra.log
+  ```
+  :::
+
+  ::: tab rip.conf
+  ```txt
+  hostname ripd
+  password zebra
+  enable password zebra
+
+  router rip
+  network 100.1.0.0/16
+  redistribute connected
+  log file /var/log/zebra/ripd.log
+  ``` 
+  :::
+::::
+
+::: tip 💡 GIẢI THÍCH
+
+- `zebra.conf`: chứa nội dung miêu tả cho công cụ `Quagga` như : 
+  
+  1. username và password
+
+  2. Đường dẫn nhật ký (`log file`)
+
+- `daemons`: chứa khai báo các giao thức vạch đường được `Quagga` hỗ trợ như :
+
+  1. `RIPv2` trên `IPv4`: đặt tên là `ripd`
+
+  2. `OSPFv2` trên `IPv4`: đặt tên là `ospfd`
+
+  3. `BGP` trên `IPv4` và `IPv6`: đặt tên là `bgpd`
+
+- `ripd.conf`: chứa nội dung miêu tả hoạt động của giải thuật `RIPv2`
+
+  1. Lệnh `router rip`: cho biết router sẽ sử dụng `RIPv2` làm vạch đường 
+
+  2. Lệnh `network`: là phạm vi gửi và nhận gói tin, có thể sử dụng `ip` khác dưới `24`
+
+  3. Lệnh `redistribute connected`: cho phép router đóng gói các thông tin về những nhánh mạng 
+:::
+
+::: tip 💡  MẸO
+
+Sử dụng lệnh sau để copy qua các router còn lại 
+
+```sh
+cp -r router1/etc router2
+cp -r router1/etc router3
+cp -r router1/etc router4
+```
+:::
+
+Sử dụng lệnh `tree` để xem cấu trúc file (*cài bằng lệnh sau:* `sudo apt install tree`)
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/31-17-33-18-Screen%20Shot%202021-10-31%20at%2017.33.08.png" width="250">
+
+### Khởi động máy ảo
+
+Sử dụng dụng lệnh sau để khởi tạo các máy ảo `Kathara` vừa khởi tạo :
+
+```sh
+kathara lstart
+```
+
+
+
 
 <comment/>
