--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
@@ -232,7 +232,138 @@ Sử dụng dụng lệnh sau để khởi tạo các máy ảo `Kathara` vừa 
 kathara lstart
 ```
 
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-13-38-21-Screen%20Shot%202021-10-31%20at%2017.40.46.png">
+>
+> Vậy là bạn đã sử dụng dịch vụ `Quagga` thành công.
 
+Sử dụng lệnh sau để kiểm tra dịch vụ `Quagga`
 
+```sh
+/etc/init.d/quagga status
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-13-41-18-Screen%20Shot%202021-11-01%20at%2013.41.12.png">
+>
+> 1. Nếu không hiện gì cả ==> dịch vụ chưa được khởi động
+>
+> 2. `ripd watchquagga` ==> thiết lập cho `RIPv2` và `Quagga` đã thành công
+>
+> 3. `watchquagga` ==> có sai sót trên `ripd.conf` nên `RIPv2` không hoạt động
+
+### Nhận xét máy ảo
+
+Sử dụng lệnh `route` để kiểm tra vạch đường trên cách máy ảo :
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-15-51-55-Screen%20Shot%202021-11-01%20at%2015.51.50.png">
+
+#### Kiểm tra ping 
+
+Từ `router1` hãy ping tới `router4` và từ `router2` đến `router4` bằng lệnh sau:
+
+```sh
+# thực hiện trên pc1
+ping 100.1.4.1 -c 5 
+# thực hiện trên pc2
+ping 100.1.0.10 -c 5
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-15-54-40-Screen%20Shot%202021-11-01%20at%2015.54.36.png">
+
+#### Kiểm tra `tcpdump`
+
+Sử dụng lệnh `tcpdump` sau đây trên `router1` để kiểm tra đường đi các gói tin
+
+```sh
+tcmpdump -i any -w /shared/BaiTap12_router1.pcap
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-16-03-06-Screen%20Shot%202021-11-01%20at%2016.02.55.png">
+
+::: warning LƯU Ý
+
+Sử dụng `CRTL+C` để dừng sau tầm `20s`
+:::
+
+#### Kiểm tra `telnet`
+
+Trên `router` bất kỳ sử dụng lệnh sau để đăng nhập vào dịch vụ `RIPv2`:
+
+```sh
+telnet localhost ripd
+```
+
+> Password : `zebra`
+ 
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-16-56-04-Screen%20Shot%202021-11-01%20at%2016.55.57.png">
+
+Sau đó trên giao diện `ripd`, sử dụng lệnh:
+
+```sh
+show ip rip
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-16-58-08-Screen%20Shot%202021-11-01%20at%2016.58.05.png">
+
+### Phân tích pcap bằng WireShark
+
+Mở gói `BaiTap12_router1.pcap` trong thư mục `shared` bằng `WireShark` và chọn gói tin có địa chỉ `100.1.0.10` (*router3*)
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-17-24-37-Screen%20Shot%202021-11-01%20at%2017.23.43.png">
+
+::: tip Nhận XÉT
+
+- Địa chỉ IP đích của khung này là `224.0.0.9`, nó là địa chỉ `Multicast` (*vì các `packages` gửi đến những đích mà nó cùng giao thức mạng với nguồn*)
+
+- Gói tin sử dụng giao thức trên **tầng vận chuyển là** `user datagram`, và hoạt động ở cổng `520`
+
+- Trong trường `Routing Infomation Protocol` đây là bộ định tuyến sử dụng giải thuật `RIPv2`
+
+- Ngoài gói tin `RIPv2` có địa chỉ `100.1.0.10` thì `router3` còn nhận dữ liệu của các `router 1`, `routere2` và `router4`
+:::
+
+### Tắt một nhánh mạng
+
+Trên `router1` thực hiện tắt nhánh mạng `eth1` bằng lệnh
+
+```sh
+ifconfig eth1 down
+```
+
+> Điều này sẽ làm cho mô hình mạng như sau:
+> 
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-17-30-09-Screen%20Shot%202021-11-01%20at%2017.29.39.png" width="500">
+
+Trên `router1` thực hiện **ping** tới `router3` bằng lệnh
+
+```sh
+ping 100.1.0.10 -c 7
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-17-32-43-Screen%20Shot%202021-11-01%20at%2017.32.38.png">
+>
+> Không thành công vì lúc này đã mất đường liên kết tới `router3`
+
+Thực hiện kiểm tra bảng vạch đường bằng `route` của `router1`:
+
+| Cũ                                                                                                                                                                      | Mới                                                                                                                                                                     |
+| ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-17-35-14-Screen%20Shot%202021-11-01%20at%2017.35.03.png" width="600"> | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-17-34-24-Screen%20Shot%202021-11-01%20at%2017.34.16.png" width="600"> |
+
+==> Cụ thể không còn liên kết nào ở `eth1` như trên, giao diện `eth2` của `router1` sẽ thay thế giao diện `eth1` đã bị tắt đi
+
+::: tip KẾT LUẬN
+
+Giải thuật `RIPv2` trên `router` tự động cập nhật lại đường đi khi cấu trúc mạng thay đổi để đảm bảo dữ liệu đường truyền tải với đường đi ngắn nhất và không bị mất mát dữ liệu
+:::
+
+### Hủy máy ảo
+
+Sử dụng lệnh `kathara` sau để hủy hệ thống máy ảo
+
+```sh
+kathara lclean
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-17-40-06-Screen%20Shot%202021-11-01%20at%2017.40.02.png" width="600">
 
 <comment/>
