--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
@@ -13,7 +13,7 @@
 
 - Các giải thuật mà `router` sử dụng để vạch đường gọi là `IGP` (*Interior GateWay Protocol*).
 
-::: 💡 tip Giải thuật <code>RIP</code> và  <code>OSPF</code>
+::: tip 💡 Giải thuật <code>RIP</code> và  <code>OSPF</code>
 
 - `RIP` (*[Routing Information Protocol](https://en.wikipedia.org/wiki/Routing_Information_Protocol))*: sử dụng giải thuật `Distance Vector` (*theo nguyên lý [bellman-Ford](https://vi.wikipedia.org/wiki/Thu%E1%BA%ADt_to%C3%A1n_Bellman%E2%80%93Ford)*), phiên bản `RIP` version **2**:
 
@@ -310,7 +310,7 @@ Mở gói `BaiTap12_router1.pcap` trong thư mục `shared` bằng `WireShark` v
 
 > <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-17-24-37-Screen%20Shot%202021-11-01%20at%2017.23.43.png">
 
-::: tip Nhận XÉT
+::: tip 💡 NHẬN XÉT
 
 - Địa chỉ IP đích của khung này là `224.0.0.9`, nó là địa chỉ `Multicast` (*vì các `packages` gửi đến những đích mà nó cùng giao thức mạng với nguồn*)
 
