--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md
@@ -2,7 +2,7 @@
 
 ::: tip 📁 TÀI NGUYÊN
 
-[Download tài liệu buổi 1](https://drive.google.com/uc?id=1gMBTY130ugzWwn3mHIdXuTe9F_GACYHz&export=view)
+[Download tài liệu buổi 1](https://drive.google.com/file/d/1gMBTY130ugzWwn3mHIdXuTe9F_GACYHz/preview)
 :::
 
 ## I.Chuẩn bị 
