--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/2.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/2.md
@@ -2,7 +2,7 @@
 
 ::: tip 📁 TÀI NGUYÊN
 
-[Download tài liệu buổi 2](https://drive.google.com/uc?id=108G1eui71KWLox5ZOg152FepWrKN7PEd&export=view)
+[Download tài liệu buổi 2](https://drive.google.com/file/d/108G1eui71KWLox5ZOg152FepWrKN7PEd/preview)
 :::
 
 ## 1.Chuẩn bị
