--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/3.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/3.md
@@ -2,7 +2,7 @@
 
 ::: tip 📁 TÀI NGUYÊN
 
-[Download tài liệu buổi 3](https://drive.google.com/uc?id=12LJKW57xrFUzgI1ZWIl5Vvws4arir3me&export=view)
+[Download tài liệu buổi 3](https://drive.google.com/file/d/12LJKW57xrFUzgI1ZWIl5Vvws4arir3me/preview)
 :::
 
 ## 1. Bài tập 8
