--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
@@ -2,7 +2,7 @@
 
 ::: tip 📁 TÀI NGUYÊN
 
-[Download tài liệu buổi 4](https://drive.google.com/uc?id=1yC_AMzdyaNDbFktZ4c_-FTfnK1b0Bt1z&export=view)
+[Download tài liệu buổi 4](https://drive.google.com/file/d/1yC_AMzdyaNDbFktZ4c_-FTfnK1b0Bt1z/preview)
 :::
 
 ## Kiến thức
@@ -47,7 +47,7 @@
 - Được cài đặt tại đường dẫn `/etc/quagga` trong máy ảo `Kathara`
 :::
 
-## 1. Bài tập 12
+## 1.Bài tập 12
 
 ::: tip 💡 MÔ HÌNH
 
@@ -279,7 +279,7 @@ tcmpdump -i any -w /shared/BaiTap12_router1.pcap
 
 > <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-16-03-06-Screen%20Shot%202021-11-01%20at%2016.02.55.png">
 
-::: warning LƯU Ý
+::: warning ⚠️ LƯU Ý
 
 Sử dụng `CRTL+C` để dừng sau tầm `20s`
 :::
@@ -365,5 +365,533 @@ kathara lclean
 ```
 
 > <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/01-17-40-06-Screen%20Shot%202021-11-01%20at%2017.40.02.png" width="600">
+
+## 2.Bài tập 13
+
+::: tip 💡 MÔ HÌNH
+
+Xây dựng máy ảo theo mô hình sau đây :
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/02-14-44-48-Screen%20Shot%202021-11-02%20at%2014.44.40.png">
+
+:::
+### Tạo thư mục và các file
+
+Xây dựng mô hình mạng như dưới đây: 
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/03-14-56-53-Screenshot%20from%202021-11-03%2014-54-36.png" width="600">
+
+Bằng các lệnh sau :
+
+```sh
+mkdir ~/Desktop/BaiTap13
+cd ~/Desktop/BaiTap13
+mkdir router1 router2 router3 router4
+touch lab.conf router1.startup router2.startup router3.startup router4.startup
+```
+
+### Thiết lập các file
+
+Cấu hình và thiết lập các file như sau:
+
+:::: tabs
+
+  ::: tab lab.conf
+  ```txt
+  router1[0]=H
+  router1[1]=G
+  router1[2]=E
+  router1[3]=A
+
+  router2[0]=E
+  router2[1]=F
+  router2[2]=B
+
+  router3[0]=F
+  router3[1]=G
+  router3[2]=I
+  router3[3]=C
+
+  router4[0]=D
+  router4[1]=I
+  router4[2]=H
+  ```
+  :::
+
+  ::: tab router1.startup
+  ```txt
+  ifconfig eth0 100.1.0.13/30 up
+  ifconfig eth1 100.1.0.9/30 up
+  ifconfig eth2 100.1.0.1/30 up
+  ifconfig eth3 100.1.1.1/24 up
+  /etc/init.d/quagga start 
+  ```
+  :::
+
+  ::: tab router2.startup
+  ```txt
+  ifconfig eth0 100.1.0.2/30 up
+  ifconfig eth1 100.1.0.5/30 up
+  ifconfig eth2 100.1.2.1/24 up
+  /etc/init.d/quagga start
+  ```
+  :::
+
+  ::: tab router3.startup
+  ```txt
+  ifconfig eth0 100.1.0.6/30 up
+  ifconfig eth1 100.1.0.10/30 up
+  ifconfig eth2 100.1.0.17/30 up
+  ifconfig eth3 100.1.3.1/24 up
+  /etc/init.d/quagga start 
+  ```
+  :::
+
+  ::: tab router4.startup
+  ```txt
+  ifconfig eth0 100.1.4.1/24 up
+  ifconfig eth1 100.1.0.18/30 up
+  ifconfig eth2 100.1.0.14/30 up
+  /etc/init.d/quagga start
+  ```
+  :::
+::::
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/03-14-51-06-Screen%20Shot%202021-11-03%20at%2014.51.01.png">
+
+### Cấu hình `Quagga`
+
+Trong mỗi thư viện `router` hãy tạo thư mục như sau:
+
+:::: tabs
+
+  ::: tab daemons
+  ```txt
+  zebra=yes
+  ospfd=yes
+  ```
+  :::
+
+  ::: tab zebra.conf
+  ```txt
+  hostname zebra
+  password zebra
+  enable password zebra
+  log file /var/log/zebra/zebra.log
+  ```
+  :::
+
+  ::: tab ospfd.conf
+  ```txt
+  hostname ospfd
+  password zebra
+  enable password zebra
+
+  interface eth0
+  ospf cost 30
+
+  interface eth1
+  ospf cost 80
+
+  interface eth2
+  ospf cost 20
+
+  router ospf
+  network 100.1.0.0/16 area 0.0.0.0
+  redistribute connected
+  
+  log file /var/log/zebra/ospfd.log
+  ```
+  :::
+::::
+
+::: tip 💡  MẸO
+
+Sử dụng lệnh sau để copy qua các router còn lại 
+
+```sh
+cp -r router1/etc router2
+cp -r router1/etc router3
+cp -r router1/etc router4
+```
+:::
+
+> Sử dụng `tree` để kiểm tra cấu trúc của các thư mục
+>
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/03-15-06-55-Screen%20Shot%202021-11-03%20at%2015.06.48.png" width="180">
+
+::: tip 💡 GIẢI TÍCH
+- Tạo file `ospfd.conf` thay vì `ripd.conf` vì chúng ta sử dụng giải thuật `OSPFv2` thay vì `RIPv2`
+
+- Lệnh `interface` chỉ ra giao diện của `router` sẽ chạy giải thuật `OSPFv2`
+:::
+
+### Khởi động máy ảo
+
+Sử dụng lệnh `kathara lstart` để khởi động hệ thống máy ảo vừa tạo:
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/03-15-39-12-Screen%20Shot%202021-11-03%20at%2015.39.08.png">
+>
+> ==> Không có lỗi gì xảy ra trên mỗi `router`, các cấu hình đã chuẩn 
+
+Sử dụng lệnh sau trên từng `router` để kiểm tra dịch vụ `Quagga` vừa tạo:
+
+```sh
+/etc/init.d/quagga status
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/03-15-40-53-Screen%20Shot%202021-11-03%20at%2015.40.48.png">
+
+::: warning ⚠️ LƯU Ý
+
+- Nếu hiện `ospfd watchquagga zebra`: dịch vụ `Quagga` đã được sử dụng và đang dùng giải thuật `OSFPv2`
+
+- Nếu không hiện gì hết thì dịch vụ `Quagga` đã xảy ra lỗi
+
+- Nếu hiện `watchquagga` thì có sai sót trên `ospfd.conf` nên `OSFPv2` không hoạt động
+:::
+
+### Nhận xét máy ảo
+
+#### Kiểm tra vạch đường
+
+Sử dụng lệnh `route` trên từng `router` để kiểm tra bảng vạch đường:
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/03-15-45-56-Screen%20Shot%202021-11-03%20at%2015.45.53.png">
+
+#### Kiểm tra sự liên thông 
+
+Thực hiện kiểm tra sự liên thông giữa các `router` bằng lệnh `ping` 
+
+- Từ `router1` tới `router4`
+
+- Từ `router2` tới `router3`
+
+Bằng lệnh sau đây:
+
+```sh
+# thực hiện trên router1
+ping 100.1.4.1 -c 5
+# thực hiện trên router 2
+ping 100.1.0.10 
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/03-15-48-43-Screen%20Shot%202021-11-03%20at%2015.48.39.png">
+
+==> Kiểm tra thành công
+
+### Kiểm tra đường đi
+
+Trên `router1` thực hiện các lệnh như sau:
+
+```sh
+traceroute 100.1.0.5  # eth1 của router2
+traceroute 100.1.0.17 # eth2 của router3
+traceroute 100.1.0.10 # eth1 của router3
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/03-15-52-15-Screen%20Shot%202021-11-03%20at%2015.51.45.png">
+
+
+::: tip 💡 NHẬN XÉT
+
+Nhờ giải thuật `OSPFv2` tăng khả năng mở rộng và hội tụ nhanh mà `router1` đi qua các nhánh mạng của `router2` và `router3` không có nhánh mạng trung gian nào
+:::
+
+#### Bắt các gói tin
+
+Trên `router` thực hiện lệnh sau đây để bắt các gói tin
+
+```sh
+tcpdump -i any -w /shared/BaiTap13_router1.pcap
+```
+
+> Dừng lại sau `30s` bằng lệnh `CRTL+C`
+>
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/03-16-03-32-Screen%20Shot%202021-11-03%20at%2016.03.28.png">
+
+Mở thư mục `BaiTap12_router1.pcap` vừa tạo bằng `WireShark` và chọn IP nguồn `100.1.0.2`:
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/03-16-11-31-Screen%20Shot%202021-11-03%20at%2016.10.56.png">
+
+::: tip 💡 NHẬN XÉT
+
+- Địa chỉ IP của khung này là `224.0.0.5`, và đây là địa chỉ `Multicast` (*vì các `packages` gửi đến những đích mà nó cùng giao thức mạng với nguồn*)
+
+- Gói tin này dùng giao thức `Open Shortest Path First` trên tầng vận chuyển
+
+- Trong mục `OSPF`:
+
+  1. Hiện thuật toán `OSPF` đang sử dụng là `version 2`
+
+  2. `Active Neighbor` là danh sách các bộ định tuyến lân cận hoặc liền kề
+
+  3. `Designated Router` là bộ định tuyến liền kề với bộ định tuyến hiện tại
+
+  4. `Backup Designated Router` phục vụ như một chế độ chờ để nhận cập nhật các bộ định tuyến hiện tại
+:::
+
+### Tắt một nhánh mạng
+
+Trên `router1` hãy tắt nhánh mạng `eth1` bằng lệnh sau:
+
+```sh
+ifconfig eth1 down
+```
+
+Sau đó hãy `ping` tới `router3` bằng lệnh: `ping 100.1.0.10 -c 5`
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/03-16-34-09-Screen%20Shot%202021-11-03%20at%2016.33.56.png">
+
+==> Ping vẫn thành công, tuy bảng vạch đường đã thay đổi và không còn `eth1`
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/03-16-36-05-Screen%20Shot%202021-11-03%20at%2016.35.55.png">
+
+::: tip 💡 NHẬN XÉT
+
+Giải thuật `OSPFv2` trên `router` tự động cập nhật lại đường bằng một đường đi mới, để đảm bằng tính liên thông của các `router` và chi phí ngắn nhất để từ `router` đến các `router` còn lại.
+:::
+
+### Hủy hệ thống máy ảo
+
+Sử dụng lệnh `kathara lclean` để hủy hệ thống máy ảo:
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/03-16-55-34-Screen%20Shot%202021-11-03%20at%2016.55.30.png" width="600">
+
+## 3.Bài tập 14
+
+::: tip 💡 MÔ HÌNH
+
+Xây dụng hệ thống mạng theo mô hình sau:
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/03-23-16-21-Screen%20Shot%202021-11-03%20at%2023.16.17.png">
+:::
+
+### Tạo thư mục và các file
+
+Tạo các thư mục và file theo mô hình như sau:
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/04-15-33-07-Screenshot%20from%202021-11-04%2015-32-32.png">
+
+Bằng cách lệnh sau:
+
+```sh
+mkdir ~/Desktop/BaiTap14
+cd ~/Desktop/BaiTap14
+mkdir pc2 pc3 router1 router2 router3 routerisp
+touch lab.conf pc2.startup pc3.startup router1.startup router2.startup router3.startup routerisp.startup
+```
+
+### Thiết lập các file
+
+Cấu hình và thiết lập các thư mục vừa tạo như sau:
+
+:::: tabs
+
+  ::: tab lab.conf
+  ```txt
+  pc2[0]=B
+  pc3[0]=C
+
+  router1[0]=A
+  router1[1]=D
+  router1[2]=E
+
+  router2[0]=B
+  router2[1]=D
+  router2[2]=F
+
+  router3[0]=C
+  router3[1]=E
+  router3[2]=F
+
+  routerisp[0]=A
+  ```
+  :::
+
+  ::: tab router1.startup
+  ```txt
+  ifconfig eth0 200.117.68.1/30 up
+  ifconfig eth1 10.0.1.1/30 up
+  ifconfig eth2 10.0.1.5/30 up
+  /etc/init.d/quagga start 
+  ```
+  :::
+
+  ::: tab router2.startup
+  ```txt
+  ifconfig eth0 192.168.1.1/24 up
+  ifconfig eth1 10.0.1.2/30 up
+  ifconfig eth2 10.0.1.9/30 up
+  /etc/init.d/quagga start 
+  ```
+  :::
+
+  ::: tab router3.startup
+  ```txt
+  ifconfig eth0 192.168.2.1/24 up
+  ifconfig eth1 10.0.1.6/30 up
+  ifconfig eth2 10.0.1.10/30 up
+  /etc/init.d/quagga start 
+  ```
+  :::
+
+  ::: tab routerisp.startup
+  ```txt
+  ifconfig eth0 200.117.68.2/30 up
+  route add default gw 200.117.68.1
+  ```
+  :::
+
+  ::: tab pc2.startup
+  ```txt
+  ifconfig eth0 192.168.1.200/24 up
+  route add default gw 192.168.1.1
+  ```
+  :::
+
+  ::: tab pc3.startup
+  ```txt
+  ifconfig eth0 192.168.2.111/24 up
+  route add default gw 192.168.2.1
+  ```
+  :::
+::::
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/04-21-06-12-Screen%20Shot%202021-11-04%20at%2021.06.05.png">
+
+###  Cấu hình Quagga
+
+Trong mỗi thư viện `router` hãy tạo mục như sau:
+
+:::: tabs 
+
+  ::: tab daemons
+  ```txt
+  zebra=yes
+  ripd=yes
+  ```
+  :::
+
+  ::: tab zebra.conf
+  ```txt
+  hostname zebra
+  password zebra
+  enable password zebra
+
+  log file /var/log/zebra/zebra.log
+  ```
+  :::
+
+  ::: tab ripd.conf
+  ```txt
+  hostname ripd
+  password zebra
+  enable password zebra
+
+  router rip
+  network 10.0.1.0/28
+  redistribute connected
+
+  log file /var/log/zebra/ripd.log
+  ```  
+  :::
+::::
+
+::: warning ⚠️ LƯU Ý
+
+Như mô hình đề bài thì `routerISP` không thuộc phạm vị dịch vụ `Quagga` nên ta bỏ không cấu hình `Quagga` cho `routerISP`
+:::
+
+::: tip 💡  MẸO
+
+Sử dụng lệnh sau để copy qua các router còn lại 
+
+```sh
+cp -r router1/etc router2
+cp -r router1/etc router3
+```
+:::
+
+### Khởi động máy ảo
+
+Sử dụng lệnh `kathara lstart` để khởi tạo hệ thống máy ảo:
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/04-15-35-46-Screen%20Shot%202021-11-04%20at%2015.35.43.png">
+>
+> ==> Không báo lỗi, đã thành công chạy hệ thống máy ảo
+
+Sử dụng lệnh sau đây trên từng `router` để kiềm tra dịch vụ `Quagga`:
+
+```sh
+/etc/init.d/quagga status
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/04-15-39-17-Screen%20Shot%202021-11-04%20at%2015.38.06.png">
+
+### Kiểm tra máy ảo
+
+#### Tính liên thông của các router
+
+#### Từ `routerISP` tới các `router` khác
+
+```sh
+ping 200.117.68.1 -c 5 #router1
+ping 192.168.1.1 -c 5 #router2
+ping 192.168.2.1 -c 5 #router3
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/04-15-45-44-Screenshot%20from%202021-11-04%2015-44-16.png">
+
+==> Thành công
+#### Từ `router` bất kỳ tới `routerISP`
+
+```sh
+ping 200.117.68.2 -c 3
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/04-15-47-16-Screen%20Shot%202021-11-04%20at%2015.47.09.png">
+
+==> Thành công
+
+#### Từ `pc2` tới `pc3` và ngược lại
+
+```sh
+ping 192.168.2.111 -c 3 #từ pc2 sang pc3
+ping 192.168.1.200 -c 3 #từ pc3 sang pc2
+```
+
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/04-15-49-57-Screen%20Shot%202021-11-04%20at%2015.49.53.png" width="400">
+
+==> Thành công
+
+#### Từ `pc2` và `pc3` tới `routerISP` và ngược lại
+
+```sh
+ping 200.217.68.2 -c 5 #gõ trên pc2 và pc3
+ping 192.168.2.111 #gõ trên routerISP
+ping 192.168.1.200 #gõ trên routerISP
+```
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/04-21-08-37-Screen%20Shot%202021-11-04%20at%2021.08.32.png" width="400">
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/04-21-09-27-Screen%20Shot%202021-11-04%20at%2021.09.23.png" width="400">
+
+::: tip 💡 NHẬN XÉT
+
+- Các router trong hệ thống `ping` được cho nhau
+
+- 2 thiết bị `pc2` và `pc3` ping được cho nhau
+
+- `pc2` và `pc3` gửi được `ICMP echo request` cho `routerISP` nhưng `routerISP` không gửi được `ICMP echo reply` đến `pc2` và cả `pc3` (*vì `routerISP` không nằm trong định tuyến nội bộ và chỉ liên kết với `router1`*)
+:::
+
+### Hủy hệ thống máy ảo
+
+Sử dụng lệnh `kathara lclean` để hủy hệ thống máy ảo:
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/04-23-41-22-Screen%20Shot%202021-11-04%20at%2023.41.17.png" width="600">
+
 
 <comment/>
