--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/5.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/5.md
@@ -2,7 +2,13 @@
 
 ::: tip 📁 TÀI NGUYÊN
 
-[Download tài liệu buổi 5](https://drive.google.com/uc?id=1xzqWDuGPQySiI5nvx9CR7OeZZUwJSGUD&export=view)
+[Download tài liệu buổi 5](https://drive.google.com/file/d/1mPP6ZO6n-F_L1N2NykTZqq-8acGWFAJm/preview)
 :::
+
+::: warning ⚠️ LƯU Ý
+
+Lược bớt bài `16` và `17` vì có thể nó quá khó !!!
+:::
+
 
 <comment/>
