--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/5.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/5.md
@@ -10,5 +10,177 @@
 Lược bớt bài `16` và `17` vì có thể nó quá khó !!!
 :::
 
+## 1.Kiến thức
+
+### Giao thức `HTTP`
+
+`Hyper Text Transfer Protocol` (*[HTTP](https://vi.wikipedia.org/wiki/Hypertext_Transfer_Protocol)*) là một giao thức trong dịch vụ `WWW` (*Wordld Wide Web*) của `Internet`, sử dụng kết nối [TCP](https://vi.wikipedia.org/wiki/TCP) giữa `client` và `server` 
+
+> Mô hình `Client` và `Server`
+>
+> <br>
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/05-13-05-42-socket_client_server.webp">
+
+::: tip 💡 MẸO
+
+- `TCP` là giao thức truyền dữ liệu có kiểm tra tính toàn vẹn của dữ liệu, trước ngược với `UDP` là không kiểm tra mà gửi và nhận luôn
+
+- `TCP` chậm hơn so với `UDP` nhưng lại đảm bảo được tính toàn vẹn dữ liệu
+
+- Trong thực tế `UDP` dùng trong các dịch vụ `Stream` vì nó ưu tiên tốc độ nên đôi lúc phía người coi sẽ gây ra mờ video, và chậm chờn...
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/05-13-10-36-an5d7xV_700b.jpg" width="250">
+:::
+
+### Giao thức `DNS`
+
+`Domain Name System` (*[DNS](https://vi.wikipedia.org/wiki/H%E1%BB%87_th%E1%BB%91ng_ph%C3%A2n_gi%E1%BA%A3i_t%C3%AAn_mi%E1%BB%81n)*) là hệ thống phân giải tên miền, nhiệm vụ đó là chuyển `Địa chỉ tên` thành `địa chỉ IP` và ngược lại
+
+::: tip 💡 GIẢI THÍCH
+
+Vì trên mạng chỉ có thể nhận biết các địa chỉ thông qua `IP` chứ không phải tên 
+
+> Ví dụ như google.com, thực chất nó có địa chỉ `172.217.24.238`, nhưng nhờ `DNS` mà ta chỉ cần gõ `google.com` thì nó sẽ tự phân giải ra `IP`
+>
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/05-13-15-37-Screen%20Shot%202021-11-05%20at%2013.15.33.png">
+:::
+
+### Giao thức `SMTP` và `IMAP`
+
+Đây là một trong những giao thức phổ biến trong `Email Server`
+
+- `Simple Mail Transfer Protocol` (*[SMTP](https://vi.wikipedia.org/wiki/SMTP)*) là giao thức truyền tải `email` đơn giản qua mạng `Internet` chẳng hạn như `Outlook`, `Gmail`... sử dụng cổng `25` trong giao thức `TCP`
+
+- `Internet Access Message Protocol` (*[IMAP](https://vi.wikipedia.org/wiki/Internet_Message_Access_Protocol)*) là một giao thức truyền tải `email` từ máy chủ nhận, tức là bạn chỉ có thể nhận tin qua giao thức này trên cổng `143`
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/05-13-27-43-5637427471319040.svg">
+
+## 2.Bài tập 15
+
+::: tip 💡 MÔ HÌNH
+
+Tạo mô hình mạng như sau:
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/05-13-25-25-Screen%20Shot%202021-11-05%20at%2013.25.18.png" width="500">
+:::
+
+### Tạo các thư mục và các file
+
+Tạo các thư mục và file theo mô hình sau:
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/05-15-59-01-Screenshot%20from%202021-11-05%2015-58-27.png">
+
+Bằng những lệnh sau: 
+
+```sh
+mkdir ~/Desktop/BaiTap15
+cd ~/Desktop/BaiTap15
+mkdir pc router1 router2 webserver
+touch lab.conf pc.startup router1.startup router2.startup webserver.startup
+```
+
+### Thiết lập các file
+
+Trong các file cấu hình, hãy cấu hình theo mô hình trên như sau:
+
+:::: tabs
+
+  ::: tab lab.conf
+  ```txt
+  pc[0]=B
+  router1[0]=A
+  router1[1]=C
+  router2[0]=B
+  router2[1]=C
+  webserver[0]=A
+  ```
+  :::
+
+  ::: tab router1.startup
+  ```txt
+  ifconfig eth0 192.168.1.1/24 up
+  ifconfig eth1 10.0.0.1/30 up
+  route add -net 192.168.2.0/24 gw 10.0.0.2
+  ```
+  :::
+
+  ::: tab router2.startup
+  ```txt
+  ifconfig eth0 192.168.2.1/24 up
+  ifconfig eth1 10.0.0.2/30 up
+  route add -net 192.168.2.1/24 gw 10.0.0.1
+  ```
+  :::
+
+  ::: tab pc.startup
+  ```txt
+  ifconfig eth0 192.168.2.100/24 up
+  route add default gw 192.168.2.1
+  ```
+  :::
+
+  ::: tab webserver.startup
+  ```txt
+  ifconfig eth0 192.168.1.100/24 up
+  route add default gw 192.168.1.1
+  ```
+  :::
+::::
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/05-16-02-16-Screen%20Shot%202021-11-05%20at%2016.02.08.png">
+
+
+### Khởi động hệ thống máy ảo
+
+Sử dụng lệnh `kathara lstart` để khởi động hệ thống máy ảo đã tạo:
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/05-16-03-13-Screen%20Shot%202021-11-05%20at%2016.03.08.png" width="600">
+
+==> Không có lỗi giữa các `máy ảo`
+### Chạy dịch vụ `WebServer`
+
+Để chạy dịch vụ `WebServer`, ta phải khởi động trên `webserver` phần mềm `apache2` bằng lệnh sau:
+
+```sh
+/etc/init.d/apache2 start
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/05-16-06-47-Screen%20Shot%202021-11-05%20at%2016.06.41.png" width="430">
+>
+> ==> Đã khởi động dịch vụ `apache2` 
+
+Trên `pc` hãy mở dịch vụ web bằng lệnh `links`
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/05-16-16-11-Screen%20Shot%202021-11-05%20at%2016.16.08.png" width="400">
+
+::: tip 💡 MẸO
+
+Sử dụng `F10` trên `pc` để mở `Menu Bar` và thao tác tới trình duyệt web
+:::
+
+Trên `webserver` hãy gõ lệnh sau để bắt các gói tin
+
+```sh
+tcpdump -s 1536 -w /shared/BaiTap15_webserver.pcap
+```
+
+Sau đó trên `pc` hãy bấm vào `File => Go to URL` và nhập `https://192.168.1.100` (*đây là địa chỉ của `webserver`*)
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/05-16-27-03-Screen%20Shot%202021-11-05%20at%2016.26.46.png" width="400">
+>
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/05-17-16-02-Screen%20Shot%202021-11-05%20at%2017.15.54.png" width="500">
+
+Sau đó thoát ra bằng cách nhấn `F10 => Exit`
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/05-17-16-44-Screen%20Shot%202021-11-05%20at%2017.16.20.png" width="350">
+
+Và dừng lệnh `tcpdump` trên `pc` bằng `CTRL+C`
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/05-17-44-34-Screen%20Shot%202021-11-05%20at%2017.44.30.png">
+
+### Phân tích gói tin bằng `WireShark`
+
+Mở file `BaiTap15_webserver.pcap` bằng ứng dụng `WireShark`
+
 
 <comment/>
