--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/5.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/5.md
@@ -2,7 +2,7 @@
 
 ::: tip 📁 TÀI NGUYÊN
 
-[Download file buổi 5](https://drive.google.com/file/d/1MpPj75NVQAIRilgXf4eCjPwWpsZMJEDd/view)
+[Download file buổi 5](https://drive.google.com/file/d/1gUtlIRYJ2q3Nl9u9Yotd3aakMnxLSHns/preview)
 :::
 
 ## 1. Cài đặt CentOS
@@ -343,7 +343,7 @@ Bạn cần phải cài đặt phần mềm `BIND` trên `CentOS` để phân gi
 > <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/17-20-06-29-icons8-questions.png" width="30"> Kiểm tra kết quả 
 > 
 > ```bash
-> $ nslookip www.qtht.com.vn <địa chỉ IP máy>
+> $ nslookup www.qtht.com.vn <địa chỉ IP máy>
 > ```
 
 
