--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/5.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/5.md
@@ -1,4 +1,4 @@
-# Buổi hành buỗi 5
+# Thực hành buổi 5
 
 ::: tip 📁 TÀI NGUYÊN
 
@@ -180,7 +180,55 @@ Và dừng lệnh `tcpdump` trên `pc` bằng `CTRL+C`
 
 ### Phân tích gói tin bằng `WireShark`
 
-Mở file `BaiTap15_webserver.pcap` bằng ứng dụng `WireShark`
+Mở file `BaiTap15_webserver.pcap` bằng ứng dụng `WireShark` 
 
+#### Mở khung `3` và chọn mục `Tranmisson Control Protocol Header`:
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/06-15-50-02-Screen%20Shot%202021-11-06%20at%2015.49.57.png">
+
+::: tip 💡 NHẬN XÉT
+
+- Trình duyệt `links` đang hoạt đổng ở cổng `43452`
+
+- Dịch vụ `Apache` đang hoạt động ở cổng 80
+
+- `Flag Syn` có giá trị bit là `1` để thông báo kích thước màn hình của máy `Client` đến `Server`, Sau đó `Server` sẽ trả về giao diện phù hợp cho màn hình máy `Client`
+
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/06-15-53-56-Screen%20Shot%202021-11-06%20at%2015.53.48.png" width="300">
+::: 
+
+####  Chọn khung số `4` và chọn mục `Tranmisson Control Protocol Header`
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/06-15-56-47-Screen%20Shot%202021-11-06%20at%2015.56.43.png">
+
+::: tip 💡 NHẬN XÉT
+
+`Flag ACK và SYN` đã được bật lên, để xác nhận gửi gói tin thành công từ `Client` đến `Server` và `Server` cũng phản hồi thành công về phía `Client`
+:::
+
+#### Chọn khung số `6` và chọn mục `Tranmisson Control Protocol Header`
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/06-16-00-58-Screen%20Shot%202021-11-06%20at%2016.00.55.png">
+
+::: tip 💡 NHẬN XÉT
+
+- `Flag PUSH` đã được bật lên để chỉ định máy phải chuyển dữ liệu đi tới `Server`
+
+- `Flag FIN` đã được bật lên để ngắt kết nối 3 chiều trong giao thức `TCP`
+
+- Trong `HTTP Header`:
+
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/06-16-02-55-Screen%20Shot%202021-11-06%20at%2016.02.51.png">
+
+  + Thông điệp `HTTP` gửi đi có dạng `GET`
+
+  + Thông điệp có mã là `200` nghĩa là `request is OK` (*Tham khảo [tại đây](https://www.w3schools.com/tags/ref_httpmessages.asp)*)
+:::
+
+### Hủy hệ thống máy ảo
+
+Sử dụng lệnh `kathara lclean` để hủy hệ thống máy ảo:
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/06-16-06-37-Screen%20Shot%202021-11-06%20at%2016.06.29.png" width="600">
 
 <comment/>
