--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/6.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/6.md
@@ -1,3 +1,9 @@
-# Buổi thực hành 6
+# Thực hành buổi 6
+
+::: tip 📁 TÀI NGUYÊN
+
+[Download tài liệu buổi 6](https://drive.google.com/file/d/1BV38gOxrVap-NMhQ8NqNnGyiGYje4cYI/preview)
+:::
+
 
 <comment/>
