--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/1.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/1.md
@@ -1,4 +1,4 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-14-42-05-icons8-1_cute.png" width="45"> Bài thực hành 1
+#  Bài thực hành <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-14-42-05-icons8-1_cute.png" width="45">
 
 Trong bài này bạn cần nắm bắt các mục như sau : 
 
