--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/2.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/2.md
@@ -186,7 +186,7 @@ Mở file `BT5_pc2.pcap` bằng `Wireshark` :
 
 ::: tip 💡 NHẬN XÉT
 
-- Toàn bộ khung số `3` có kích thước là `98 byte`
+- Toàn bộ khung số `3` có kích thước là `48 byte`
 
 - Chọn **Internet Control Message Protocol** trong khung : 
 
@@ -214,9 +214,9 @@ Mở file `BT5_pc2.pcap` bằng `Wireshark` :
 
 > <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/28-21-03-52-Screen%20Shot%202021-09-28%20at%2021.03.46.png">
 
-  1. Địa chỉ `MAC` của máy gửi dữ liệu là `f2:0a:34:63:fb:bc`, đây là địa chỉ của `pc2`
+  1. Địa chỉ `MAC` của máy gửi dữ liệu là `ba:96:5f:5b:b5:fd`, đây là địa chỉ của `pc2`
   
-  2. Địa chỉ `MAC` của máy nhận dữ liệu là `ba:96:5f:5b:b5:fd`, đây là địa chỉ `MAC` của `router1`
+  2. Địa chỉ `MAC` của máy nhận dữ liệu là `f2:0a:34:63:fb:bc`, đây là địa chỉ `MAC` của `router1`
 
   3. Trường Type là `0x0800`, cho biết sử dụng giao thức `IPv4`
 
