--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/3.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/3.md
@@ -507,9 +507,9 @@ Gõ lại lệnh `brctl showmacs br0` cho thiết bị `switch1` và `switch2`
 
 ::: tip 💡 NHẬN XÉT
 
-- `switch1` chỉ học được địa chỉ của máy `pc2`
+- `switch1` chỉ học được địa chỉ của máy `pc2`,`pc7`
 
-- `switch2` chỉ học được địa chỉ của máy `pc2`
+- `switch2` chỉ học được địa chỉ của máy `pc2`, `pc2`
 
 - `pc5`, `pc6`, `pc7`, `pc8` có nhận được gói tin từ `pc2`
 :::
@@ -774,8 +774,8 @@ router1[0]=E
 router1[1]=F
 router1[2]=M
 
-router2[0]=K
-router2[1]=O
+router2[0]=O
+router2[1]=K
 router2[2]=M
 ```
 
