--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/7.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/7.md
@@ -28,14 +28,230 @@ Cho sơ đồ mạng được thiết kế như sau:
 
 ### Tạo thư mục và các file
 
+```sh
+mkdir ~/Desktop/OnTap
+cd ~/Desktop/OnTap
+mkdir webserver pc1 pc2 switch1 router0 router1 router2 router3 router4 router5 router6
+touch webserver.startup pc1.startup pc2.startup switch1.startup
+touch router0.startup router1.startup router2.startup router3.startup router4.startup router5.startup router6.startup
+```
+
 ### Thiết lập các file
+
+Chúng ta sẽ vẽ lại mô hình sơ đồ như sau :
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/12-22-24-34-06-16-21-34-Screen%20Shot%202021-11-06%20at%2016.21.27.png">
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/12-15-43-17-Screen%20Shot%202021-11-12%20at%2015.43.09.png">
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/12-15-44-30-Screen%20Shot%202021-11-12%20at%2015.44.22.png">
+
+
+Và sẽ tự chế ra những mạng tượng ứng với các nhánh mạng `A`, `B`, `C`...
+
+| Nhánh | Mạng              | Router                             |
+| ----- | ----------------- | ---------------------------------- |
+| B     | 110.178.29.196/30 | router1 (`197`)<br>router2 (`198`) |
+| C     | 110.178.29.200/30 | router0 (`201`)<br>router1 (`202`) |
+| D     | 110.178.29.204/30 | router0 (`205`)<br>router3 (`206`) |
+| E     | 110.178.29.208/30 | router2 (`209`)<br>router3 (`210`) |
+
+
+| Nhánh | Mạng            | Router                           |
+| ----- | --------------- | -------------------------------- |
+| I     | 110.84.59.16/28 | router0 (`17`)<br>router6 (`18`) |
+| J     | 110.84.59.32/28 | router0 (`33`)<br>router4 (`34`) |
+| K     | 110.84.59.48/28 | router4 (`49`)<br>router5 (`50`) |
+| M     | 110.84.59.64/28 | router5 (`65`)<br>router6 (`66`) |
+
+
+
+
+```txt
+webserver[0]=A
+pc1[0]=F
+pc2[0]=G
+
+switch1[0]=F
+switch1[1]=G
+switch1[2]=H
+
+router0[0]=C
+router0[1]=D
+router0[2]=I
+router0[3]=J
+
+router1[0]=B  
+router1[1]=C
+
+router2[0]=A
+router2[1]=B
+router2[2]=E
+
+router3[0]=D
+router3[1]=E
+
+router4[0]=J
+router4[1]=K
+
+router5[0]=K
+router5[1]=M
+
+router6[0]=H
+router6[1]=I
+router6[2]=M
+```
 
 :::: tabs
 
-  ::: tab lab.conf
+  ::: tab webserver.startup
   ```txt
-
+  ifconfig eth0 12.18.10.139/25 up
+  route add default gw 12.18.10.140
   ```
   :::
 
+  ::: tab pc1.startup
+  ```txt
+  ifconfig eth0 192.168.10.10/24 up
+  route add default gw 192.168.10.1
+  ```
+  :::
+
+  ::: tab pc2.startup
+  ```txt
+  ifconfig eth0 192.168.10.11/24
+  route add default gw 192.168.10.1
+  ```
+  :::
+
+  ::: tab switch1.startup
+  ```txt
+  ifconfig eth0 up
+  ifconfig eth1 up
+  ifconfig eth2 up 
+  brctl addbr br0
+
+  brctl addif br0 eth0
+  brctl addif br0 eth1
+  brctl addif br0 eth2
+
+  brctl stp br0 on
+  ifconfig br0 up
+  ```
+  :::
 ::::
+
+
+:::: tabs 
+
+  ::: tab router0.startup
+  ```txt
+  ifconfig eth0 110.178.29.201/30 up
+  ifconfig eth1 110.178.29.205/30 up
+  ifconfig eth2 110.84.59.17/28 up
+  ifconfig eth3 110.84.59.33/28 up
+  /etc/init.d/quagga start
+  ```
+  :::
+
+  ::: tab router1.startup
+  ```txt
+  ifconfig eth0 110.178.29.197/30 up
+  ifconfig eth1 110.178.29.202/30 up
+  /etc/init.d/quagga start
+  ```
+  :::
+
+  ::: tab router2.startup
+  ```txt
+  ifconfig eth0 12.18.10.140/25 up
+  ifconfig eth1 110.178.29.198/30 up
+  ifconfig eth2 110.178.29.209/30 up
+  /etc/init.d/quagga start
+  ```
+  :::
+
+  ::: tab router3.startup
+  ```txt
+  ifconfig eth0 110.178.29.206/30 up
+  ifconfig eth1 110.178.29.210/30 up
+  /etc/init.d/quagga start
+  ```  
+  :::
+
+  ::: tab router4.startup
+  ```txt
+  ifconfig eth0 110.84.59.34/28 up
+  ifconfig eth1 110.84.59.49/28 up
+  /etc/init.d/quagga start
+  ```
+  :::
+
+  ::: tab router5.startup
+  ```txt
+  ifconfig eth0 110.84.59.50/28 up
+  ifconfig eth1 110.84.59.65/28 up
+  /etc/init.d/quagga start
+  ```
+  :::
+
+  ::: tab router6.startup
+  ```txt
+  ifconfig eth0 192.168.10.1/24 up
+  ifconfig eth1 110.84.59.18/28 up
+  ifconfig eth2 110.84.59.66/28 up
+  /etc/init.d/quagga start
+  ```  
+  :::
+::::
+
+Sử dụng giải thuật `OSPF` cho các nhánh mạng `B`, `C`, `D`, `E`
+
+> Cụ thể là `router0`, `router1`, `router2`, `router3`
+
+:::: tabs
+  ::: tab zebra.conf
+  ```txt
+  hostname zebra
+  password zebra
+  enable password zebra
+  ```
+  :::
+
+  ::: tab rip.conf
+  ```txt
+  hostname ripd
+  password zebra
+  enable password zebra
+
+  router rip
+  network 110.84.59.0/25
+  redistribute connected
+  redistribute ospf
+  ```
+  :::
+::::
+
+daemons
+
+```txt
+zebra=yes
+ospfd=yes
+ripd=yes
+```
+
+```txt
+hostname ospfd
+password zebra
+enable password zebra
+
+interface eth0
+interface eth1
+ospf cost 15
+
+router ospf
+network 110.178.29.192/27 area 0.0.0.0
+redistribute connected
+redistribute rip
+```
