--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/5.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/5.md
@@ -1,1 +1,3 @@
 # Bài thực hành <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-14-42-25-icons8-5_cute.png" width="45">
+
+## Giải thuật PRIM
